# andrewngdigitaltwin

./: .env  .gitignore  README.md  Technical-Report.docx  pyproject.toml  requirements.txt
.methodology/: analysis_results.md  implementation_plan.md  walkthrough_ragpersona_update.md  walkthrough_ui_update.md  walkthrough_upgraded.md
.pytest_tmp/test_long_term_memory_extracts0/: memory.sqlite
.pytest_tmp/test_long_term_memory_extracts1/: memory.sqlite
.pytest_tmp/test_memory_crud_operations0/: test_memory.sqlite
app/: __init__.py  chat.py  main.py
conversations/: sample_conversations.md
data/processed/: chunks.jsonl
data/raw/: andrew_ng_biography_and_teachings.txt  andrew_ng_detailed_profile.txt  andrew_ng_starter_corpus.txt
data/raw/online/: amazon_board_andrew_ng.meta.json  amazon_board_andrew_ng.txt  andrew_ng_curriculum_vitae.meta.json  andrew_ng_curriculum_vitae.txt  andrewng_org_research.meta.json  andrewng_org_research.txt  coursera_co_founder_profile.meta.json  coursera_co_founder_profile.txt  deeplearning_ai_home.txt  (+17 more)
docs/: approach.md  architecture.md
memory/: __init__.py  andrew_twin_memory.sqlite  long_term.py  memory_store.py  rate_limit_smoke.sqlite  response_cache.sqlite  short_term.py  smoke_memory.sqlite  ui_smoke.sqlite
persona/: __init__.py  andrew_ng_profile.yaml  prompt_builder.py
rag/: chunking.py  ingest.py  online_sources.py  reranker.py  retrieval.py
tests/: conftest.py  test_adaptive_persona.py  test_chunking.py  test_memory.py  test_memory_crud.py  test_prompt_builder.py  test_retrieval.py  test_retrieval_threshold.py
