[project]
name = "digital-twin-andrew-ng"
version = "0.1.0"
description = "Andrew Ng-inspired digital twin with RAG, memory, and a Streamlit demo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "streamlit>=1.35.0",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "rank-bm25>=0.2.2",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
